--- a/src/ex10_html-css-fundamentals-part2/task-03-1.css
+++ b/src/ex10_html-css-fundamentals-part2/task-03-1.css
@@ -1,17 +1,17 @@
-table {   
+.table {   
     border-collapse: collapse; 
     background: #e3eaf3;   
     font-family: Arial, Helvetica, sans-serif;
     color: #788798;
 }
-thead tr {
+.heading tr {
     background:#e3eaf3;
     font-size: 10px;
 }
-tbody {
+.bodyTable {
     font-size: 12px;
 }
-td, th {
+td, #column {
     padding: 5px 15px; 
     border: 1px solid white;     
 }
