--- a/src/ex10_html-css-fundamentals-part2/task-03-2.css
+++ b/src/ex10_html-css-fundamentals-part2/task-03-2.css
@@ -1,8 +1,8 @@
-tbody tr:nth-child(2n-1) {
+.bodyTable tr:nth-child(2n-1) {
     background: #f2f6fa; 
 } 
 
-tbody tr:nth-child(2n-1):hover {
+.bodyTable tr:nth-child(2n-1):hover {
     background: #4285f4; 
 } 
 
