--- a/src/ex10_html-css-fundamentals-part2/task-03-1.css
+++ b/src/ex10_html-css-fundamentals-part2/task-03-1.css
@@ -8,10 +8,10 @@
     background:#e3eaf3;
     font-size: 10px;
 }
-.bodyTable {
+#bodyTable {
     font-size: 12px;
 }
-td, #column {
+td, th {
     padding: 5px 15px; 
     border: 1px solid white;     
 }
