--- a/src/ex10_html-css-fundamentals-part2/task-04-1.css
+++ b/src/ex10_html-css-fundamentals-part2/task-04-1.css
@@ -147,7 +147,7 @@
 
 /*start main*/
 .main {
-    background: url("../image/background.png") no-repeat;
+    background: url("./image/background.png") no-repeat;
     background-size: 100% 100%;
     height: 885px;
 }
