--- a/src/kanban/task.css
+++ b/src/kanban/task.css
@@ -6,13 +6,15 @@ body {
 }
 header {
     display: flex;     
-    align-items: center;   
+    justify-content: space-between;
     background: #0067a3;
 }
-.menu {
+.leftBlock, .rightBlock {
     display: flex;
-    justify-content: center;
-    flex-basis: 10%;
+    align-items: center;
+}
+.menu {   
+    padding: 0 3rem; 
 }
 .buttonMenu {
     background: transparent;
@@ -22,9 +24,6 @@ header {
     width: 2.6rem;
     height: 2.6rem;
 }
-.heading {
-    flex-basis: 82%;
-}
 h1 {   
     font-family: Roboto;
     font-style: normal;
@@ -33,8 +32,7 @@ h1 {
     color: #FFFFFF;
 }
 .buttonCreateNewList {  
-    display: flex;  
-    flex-basis: 13%;   
+    display: flex;    
     height: 2.5rem;    
     background: #FFFFFF;
     border-radius: 5px;
@@ -49,10 +47,8 @@ h1 {
  .spanCreateNewList {
     white-space: nowrap;
 }
-.avatar {   
-    display: flex;  
-    justify-content: center;
-    flex-basis: 10%;      
+.avatar {       
+    padding-left: 3rem;
 }
 .borderAvatar {
     border: 0.05rem solid black;
@@ -65,13 +61,13 @@ h1 {
     height: 2.5rem;  
     padding: 0.3rem 0 0; 
 }
-.buttonUserMenu {    
+.buttonUserMenu { 
     display: flex;
-    align-items: center;
+    align-items: center;    
     background: #0067a3;  
     color: #FFFFFF;
     border: 0; 
-    font-size: 1.4rem;
+    font-size: 1.4rem;    
 } 
 .main {
     flex: 1;
