--- a/src/kanban/task.css
+++ b/src/kanban/task.css
@@ -77,6 +77,7 @@ h1 {
     flex: 1;
     display: flex;
     background: #0079bf;
+    flex-wrap: wrap;
 }
 .footer {
     display: flex;
@@ -106,10 +107,10 @@ h1 {
     color: #FFFFFF; 
     white-space: nowrap;
 }
-.imgMenu:hover, .buttonCreateNewList:hover, .buttonUserMenu:hover  {
+.hoverAction:hover {
     color: #0067a3;    
     opacity: 0.3;  
-    cursor: pointer;  
+    cursor: pointer; 
 }
 #dropDownUserMenu {
     position: absolute;
@@ -146,4 +147,71 @@ li:hover {
 ul {
     padding:  0;
     margin: 0;
+}
+
+.headingBacklog {
+    display: flex;
+}
+
+.mainBacklog {
+    display: flex;
+}
+
+.footBacklog {
+    display: flex;
+}
+
+.taskList {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: min-content;
+    padding: 1rem;
+    background-color: #ebecf0;
+    border-radius: 0.3rem;
+    width: 280px;
+    margin: 1rem;
+}
+
+.taskListHeader {
+    display: flex;
+    justify-content: space-between;
+}
+
+.taskListContent {
+
+}
+
+.taskListFooter {
+
+}
+
+h3 {
+    font-family: Roboto;     
+    font-weight: normal;
+    margin: 0;
+}
+
+.addCard {
+    font-size: 20px;
+    font-family: Roboto; 
+    color: #5e6c84;
+    border: none;
+    background-color: #ebecf0;
+}
+
+.taskListMenuBtn {
+    border: none;  
+    background-color: #ebecf0;
+}
+
+.taskListMenuImg {
+    width: 1rem;
+}
+
+.task {
+    background: #FFFFFF;
+    padding: 0.5rem 0.3rem;
+    border-radius: 0.3rem;
+    margin: 1rem 0;
 }
