--- a/src/kanban/task.css
+++ b/src/kanban/task.css
@@ -2,7 +2,7 @@ body {
     margin: 0;   
     display: flex;
     flex-direction: column;
-    min-height: 100vh; 
+    height: 100vh;
 }
 header {
     display: flex;     
@@ -17,7 +17,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    flex-grow: 0.1;
+    flex-grow: 0.03;
 }
 .menu {   
     padding: 0 3rem; 
@@ -75,9 +75,10 @@ h1 {
 } 
 .main {
     flex: 1;
-    display: flex;
     background: #0079bf;
-    flex-wrap: wrap;
+    overflow-y: auto;
+    display: block;
+    white-space: nowrap;
 }
 .footer {
     display: flex;
@@ -166,15 +167,15 @@ ul {
 }
 
 .taskList {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: min-content;
+    display: inline-block;
+    vertical-align: top;
     padding: 1rem;
     background-color: #ebecf0;
     border-radius: 0.3rem;
     width: 280px;
     margin: 1rem;
+    max-height: calc(100% - 4rem);
+    overflow: auto;
 }
 
 .taskListHeader {
@@ -216,7 +217,6 @@ h3 {
 }
 
 .taskDropdown {
-    position: absolute;
     background: white;
 }
 
@@ -225,5 +225,4 @@ h3 {
     padding: 0.5rem 0.3rem;
     border-radius: 0.3rem;
     margin: 1rem;
-
 }
